tdf#83523 ruler: Invalidate full ruler rect on app bg change

Instead of waiting for the application to restart,
hack out an immediate invalidation of the ruler.

Perhaps there is a better place to do this
because the ruler background apparently IS
changing, but it seems to require a hack
to invalidate everything.

Change-Id: I4a27cbaf484e96c19c71c04017c649e95bf80d96